# ipyfoo-svelte

./: .gitignore  README.md  deno.json  package.json  pnpm-lock.yaml  pyproject.toml  rolldown.config.js  rollup.config.js
js/: Counter.svelte  lib.svelte.js  widget.js
notebooks/: example.ipynb
scripts/: hatch_build.py
src/ipyfoo/: __init__.py
web/: Widget.svelte  index.js  lib.svelte.js
