[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipyfoo"
version = "0.0.0"
dependencies = ["anywidget"]
readme = "README.md"

[dependency-groups]
dev = ["watchfiles", "jupyterlab"]

[tool.hatch.build]
only-packages = true
artifacts = ["src/ipyfoo/static/*", "scripts/hatch_build.py"]

[tool.hatch.build.hooks.custom]
path = "scripts/hatch_build.py"
